compiler/tests/run_pass/foreign_cpp_main.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

task inc(r: region<int>, x: int@r)
  , reduces<+>(r)
{
  *x += 1;
}

task toplevel()
{
  let r = region<int>(1);
  let x = new<int@r>();
  *x = 0;
  inc(r, x);
  assert *x == 1;
}
