compiler/tests/compile_fail/type_mismatch_type1.lg
/* Copyright 2013 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#line 0

// fails-with:
// TypeError:
// tests/compile_fail/type_mismatch_type1.lg:8:36:
// Type mismatch in type x: expected a type but got int

task main() {}

task foo(r: region<int>, x: int, y: x@r) {}
